Make the new feature work and change the pathes to be align with my data. However, I will move the data to be the same for all,but it takes time.

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -115,10 +115,12 @@
     "# Github page for COCO API suggests puting data into coco/images and coco/annotations, so could do that?\n",
     "# The API is pretty straightforward and helps with visualisation etc\n",
     "######\n",
-    "root = Path('Datasets/coco')\n",
-    "# root = Path('../../Datasets/MS COCO')\n",
-    "imgs_path = root/'images'/'train2017'\n",
-    "captions_path = root/'annotations'/'captions_train2017.json'\n",
+    "#root = Path('Datasets/coco')\n",
+    "root = Path('../../Datasets/MS COCO')\n",
+    "#imgs_path = root/'images'/'train2017'\n",
+    "imgs_path = root/'train2017'\n",
+    "#captions_path = root/'annotations'/'captions_train2017.json'\n",
+    "captions_path = root/'annotations_trainval2017'/'annotations'/'captions_train2017.json'\n",
     "\n",
     "interface_params = {\n",
     "    'imgs_path': imgs_path,\n",
@@ -134,6 +136,16 @@
    "outputs": [],
    "source": [
     "coco_interface = MSCOCOInterface(**interface_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d717645e-3b16-4add-92b5-a8b022e67574",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "caption_dict = coco_interface.coco._create_caption_dict()"
    ]
   },
   {
@@ -196,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
