Chnage in the params for MS COCO, Moreover, Now the keys for the caption_imgs_dics are string not Path object, this will make the execution fast.

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -56,10 +56,11 @@
     "        :param captions_path (str): location to the captions folder.\n",
     "        \"\"\"\n",
     "        self.captions_path = captions_path\n",
+    "        self.imgs_path = imgs_path\n",
     "        # below returns list of all image POSIX file paths and ignores files/folders\n",
     "        # starting with '.' which ignores .ipynb_checkpoint folders\n",
     "        self.imgs = sorted(Path(imgs_path).glob('[!.]*'))\n",
-    "        self.coco = COCO(self.imgs, self.captions_path)\n",
+    "        self.coco = COCO(self.imgs_path, self.captions_path)\n",
     "        \n",
     "    \n",
     "    # image transforms\n",
