Finish Working on Text-PreProcessing.

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -48,20 +48,30 @@
     "class MSCOCOInterface(data.Dataset):\n",
     "    \n",
     "    # constructor\n",
-    "    def __init__(self, imgs_path, captions_path):\n",
+    "    def __init__(self, imgs_path, captions_path, freq_threshould, sequence_length):\n",
     "        \"\"\"\n",
     "        Constructor of MS COCO Interface for get imgs and caps as tensors.\n",
     "        :param root (str): location of the data on the disk\n",
     "        :param imgs_path (str): location of img folder\n",
     "        :param captions_path (str): location to the captions folder.\n",
+    "        :param freq_threshold (int): if a word is not repeated enough don't add it to the dictionary\n",
+    "        :param sequence_length (int): all sequences must be the same lenght, so this param is used to pad or cut from sentence\n",
     "        \"\"\"\n",
     "        self.captions_path = captions_path\n",
     "        self.imgs_path = imgs_path\n",
-    "        # below returns list of all image POSIX file paths and ignores files/folders\n",
-    "        # starting with '.' which ignores .ipynb_checkpoint folders\n",
-    "        self.imgs = sorted(Path(imgs_path).glob('[!.]*'))\n",
+    "        self.freq_threshould = freq_threshould\n",
+    "        self.sequence_length = sequence_length\n",
     "        self.coco = COCO(self.imgs_path, self.captions_path)\n",
+    "        self.vocabulary = Vocabulary(self.freq_threshould, self.sequence_length)\n",
+    "        self.create_vocabulary()\n",
     "        \n",
+    "    \n",
+    "    \n",
+    "    # method to create vocabulary\n",
+    "    def create_vocabulary(self):\n",
+    "        self.vocabulary.build_vocabulary(coco.captions_to_list())\n",
+    "        self.idx_to_string =  self.vocabulary.idx_to_string\n",
+    "        self.string_to_index = self.vocabulary.string_to_index\n",
     "    \n",
     "    # image transforms\n",
     "    def img_transforms(self, img):\n",
@@ -183,14 +193,6 @@
     "random_idx = random.randint(0, len(coco_interface.imgs))\n",
     "coco_interface.display_img_with_captions(random_idx)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68dcb4a7-ccff-4ae3-bb2b-0ace03280c98",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
