Add Alex's changes

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 5.29 s\n"
+      "Wall time: 2.7 s\n"
      ]
     }
    ],
@@ -169,6 +169,27 @@
     "            cap += coco_interface.idx_to_string[word_idx.item()] + ' '\n",
     "    idx += 1\n",
     "    print(cap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e4004da0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 30.4 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "coco_interface.idx_to_string = None\n",
+    "coco_interface.string_to_index = None\n",
+    "coco_interface.vocabulary.build_vocab2(coco_interface.coco.captions_to_list())"
    ]
   }
  ],
