--- a/interface.ipynb
+++ b/interface.ipynb
@@ -13,7 +13,19 @@
    "execution_count": 1,
    "id": "0d50cdee-407b-448c-9800-b03fdb30ebaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'scripts.DatasetInterface'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14612\\2606321430.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mscripts\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDatasetInterface\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMSCOCOInterface\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpathlib\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'scripts.DatasetInterface'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -40,14 +52,14 @@
     "captions_path = root/'annotations_trainval2017'/'annotations'/'captions_train2017.json'\n",
     "\n",
     "# load vocab\n",
-    "with open('idx_to_string.json') as json_file:\n",
+    "with open('vocabulary/idx_to_string.json') as json_file:\n",
     "    idx_to_string_json = json.load(json_file)\n",
     "        \n",
     "idx_to_string = dict()\n",
     "for key in idx_to_string_json:\n",
     "    idx_to_string[int(key)] = idx_to_string_json[key]\n",
     "    \n",
-    "with open('string_to_index.json') as json_file:\n",
+    "with open('vocabulary/string_to_index.json') as json_file:\n",
     "    string_to_index = json.load(json_file)\n",
     "\n",
     "\n",
