--- a/interface.ipynb
+++ b/interface.ipynb
@@ -13,19 +13,7 @@
    "execution_count": 1,
    "id": "0d50cdee-407b-448c-9800-b03fdb30ebaf",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'scripts.DatasetInterface'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14612\\2606321430.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mscripts\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDatasetInterface\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMSCOCOInterface\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpathlib\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'scripts.DatasetInterface'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -45,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = Path('../../Datasets/MS COCO')\n",
+    "root = Path('Data')\n",
     "#imgs_path = root/'images'/'train2017'\n",
     "imgs_path = root/'train2017'\n",
     "#captions_path = root/'annotations'/'captions_train2017.json'\n",
@@ -84,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 2.7 s\n"
+      "Wall time: 5.85 s\n"
      ]
     }
    ],
@@ -193,7 +181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 30.4 s\n"
+      "Wall time: 43.5 s\n"
      ]
     }
    ],
