--- a/model.ipynb
+++ b/model.ipynb
@@ -57,7 +57,17 @@
     }
    ],
    "source": [
-    "resnet50_model = models.resnet50(pretrained=True)"
+    "resnet152_model = models.resnet152(pretrained=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58e7652b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(resnet152_model.state_dict(), 'resnet152_model.pth')"
    ]
   },
   {
@@ -78,7 +88,7 @@
     }
    ],
    "source": [
-    "resnet50_model.fc"
+    "resnet152_model.fc"
    ]
   },
   {
@@ -90,7 +100,7 @@
    "source": [
     "class Encoder(nn.Module):\n",
     "    # constructor\n",
-    "    def __init__(self, embed_size):\n",
+    "    def __init__(self, embed_size, pretrained=True, model_weight_path=None):\n",
     "        \"\"\"\n",
     "        Encoder is the first part to our model.\n",
     "        The main porpose of encoder is to extract the usefule feature from an image\n",
@@ -98,10 +108,17 @@
     "        Parameters\n",
     "        ----------\n",
     "        :param embed_size (int): the embed_size will be the output of the encoder since embed_size represents the input of the decoder\n",
+    "        :param pretrained (bool): if we want to load the pretrained weigth or not\n",
+    "        :param model_weight_path (sting): path to the pre trained weight\n",
     "        \"\"\"\n",
     "        super(Encoder, self).__init__()\n",
-    "        # Load pretrained resnet50 on ImageNet\n",
-    "        self.resnet152 = models.resnet152(pretrained=True)\n",
+    "        # Load pretrained resnet152 on ImageNet\n",
+    "        if pretrained:\n",
+    "            self.resnet152 = models.resnet152(pretrained=True)\n",
+    "        else:\n",
+    "            self.resnet152 = models.resnet152(pretrained=False)\n",
+    "            self.resnet152.load_state_dict(torch.load(model_weight_path))\n",
+    "            \n",
     "        # Freeze the parameters of pre trained model\n",
     "        for param in self.resnet152.paramters():\n",
     "            param.requires_grad_(False)\n",
@@ -198,7 +215,7 @@
    "source": [
     "class Model(nn.Module):\n",
     "    # constructor\n",
-    "    def __init__(self, embed_size, hidden_size, vocab_size, num_layers):\n",
+    "    def __init__(self, embed_size, hidden_size, vocab_size, num_layers, pretrained=True, model_weight_path=None):\n",
     "        \"\"\"\n",
     "        The Image Captioning model\n",
     "        it will pass the data to encoder, encoder will be connected to decoder\n",
@@ -208,10 +225,11 @@
     "        :param hidden_size (int) : number of features in hidden state of the RNN decoder\n",
     "        :param vocab_size  (int) : The size of vocabulary or output size\n",
     "        :param num_layers (int) : Number of layers\n",
-    "        \n",
+    "        :param pretrained (bool): if we want to load the pretrained weigth or not\n",
+    "        :param model_weight_path (sting): path to the pre trained weight\n",
     "        \"\"\"\n",
     "        super(Model, self).__init__()\n",
-    "        self.encoder = Encoder(embed_size)\n",
+    "        self.encoder = Encoder(embed_size, pretrained=Trpretrainedue, model_weight_path=model_weight_path)\n",
     "        self.decoder = Decoder(embed_size, hidden_size, vocab_size, num_layers)\n",
     "        \n",
     "    def forward(self, images, captions):\n",
