Make sure that the new jsons from Alex works,

--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -51,14 +51,29 @@
    "execution_count": 2,
    "id": "2472cfa6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n# load vocab\\nwith open('vocabulary/idx_to_string.json') as json_file:\\n    idx_to_string_json = json.load(json_file)\\n        \\nidx_to_string = dict()\\nfor key in idx_to_string_json:\\n    idx_to_string[int(key)] = idx_to_string_json[key]\\n    \\nwith open('vocabulary/string_to_index.json') as json_file:\\n    string_to_index = json.load(json_file)\\n\""
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "root = Path('Data')\n",
     "#imgs_path = root/'images'/'train2017'\n",
-    "imgs_path = root/'train2017'\n",
+    "train_imgs_path = root/'train2017'\n",
+    "test_imgs_path = root/'val2017'\n",
     "#captions_path = root/'annotations'/'captions_train2017.json'\n",
-    "captions_path = root/'annotations_trainval2017'/'annotations'/'captions_train2017.json'\n",
+    "train_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_train.json'\n",
+    "val_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_val.json'\n",
+    "test_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_test.json'\n",
     "\n",
+    "\"\"\"\n",
     "# load vocab\n",
     "with open('vocabulary/idx_to_string.json') as json_file:\n",
     "    idx_to_string_json = json.load(json_file)\n",
@@ -68,7 +83,8 @@
     "    idx_to_string[int(key)] = idx_to_string_json[key]\n",
     "    \n",
     "with open('vocabulary/string_to_index.json') as json_file:\n",
-    "    string_to_index = json.load(json_file)\n"
+    "    string_to_index = json.load(json_file)\n",
+    "\"\"\""
    ]
   },
   {
@@ -91,39 +107,36 @@
    "outputs": [],
    "source": [
     "train_interface_params = {\n",
-    "    'imgs_path': imgs_path,\n",
-    "    'captions_path': captions_path,\n",
-    "    'freq_threshold': 1,\n",
+    "    'imgs_path': train_imgs_path,\n",
+    "    'captions_path': train_captions_path,\n",
+    "    'freq_threshold': 5,\n",
     "    'sequence_length': 20,\n",
     "    'caps_per_img': 1,\n",
     "    'stage': \"train\",\n",
-    "    'idx_to_string': idx_to_string,\n",
-    "    'string_to_index': string_to_index,\n",
-    "    'seed': 706\n",
+    "    'idx_to_string': None,\n",
+    "    'string_to_index': None,\n",
     "}\n",
     "\n",
     "val_interface_params = {\n",
-    "    'imgs_path': imgs_path,\n",
-    "    'captions_path': captions_path,\n",
-    "    'freq_threshold': 1,\n",
+    "    'imgs_path': train_imgs_path,\n",
+    "    'captions_path': val_captions_path,\n",
+    "    'freq_threshold': 5,\n",
     "    'sequence_length': 20,\n",
     "    'caps_per_img': 1,\n",
     "    'stage': \"validation\",\n",
-    "    'idx_to_string': idx_to_string,\n",
-    "    'string_to_index': string_to_index,\n",
-    "    'seed': 706\n",
+    "    'idx_to_string': None,\n",
+    "    'string_to_index': None,\n",
     "}\n",
     "\n",
     "test_interface_params = {\n",
-    "    'imgs_path': imgs_path,\n",
-    "    'captions_path': captions_path,\n",
-    "    'freq_threshold': 1,\n",
+    "    'imgs_path': test_imgs_path,\n",
+    "    'captions_path': test_captions_path,\n",
+    "    'freq_threshold': 5,\n",
     "    'sequence_length': 20,\n",
     "    'caps_per_img': 1,\n",
     "    'stage': \"test\",\n",
-    "    'idx_to_string': idx_to_string,\n",
-    "    'string_to_index': string_to_index,\n",
-    "    'seed': 706\n",
+    "    'idx_to_string': None,\n",
+    "    'string_to_index': None,\n",
     "}\n",
     "\n",
     "\n",
@@ -139,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f38c73a0",
    "metadata": {},
    "outputs": [
@@ -147,13 +160,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lenght of training image: 15000, Lenght of Validation image: 5000 Lenght of Testing image: 5000\n"
+      "Lenght of training image: 16252, Lenght of Validation image: 6966 Lenght of Testing image: 938\n",
+      "Lenght of vocabulary: 2688\n"
      ]
     }
    ],
    "source": [
     "print(\"Lenght of training image: {}, Lenght of Validation image: {} Lenght of Testing image: {}\"\\\n",
-    "      .format(len(coco_interface_train), len(coco_interface_val), len(coco_interface_test)))"
+    "      .format(len(coco_interface_train), len(coco_interface_val), len(coco_interface_test)))\n",
+    "\n",
+    "print(f\"Lenght of vocabulary: {len(coco_interface_train.idx_to_string)}\")"
    ]
   },
   {
@@ -608,9 +624,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ailab] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-ailab-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
