modification to MSCOCO to create correct image list for custom dataset, cleared up file paths for Alex vs Khalil

--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -64,14 +64,28 @@
     }
    ],
    "source": [
-    "root = Path('Data')\n",
-    "#imgs_path = root/'images'/'train2017'\n",
-    "train_imgs_path = root/'train2017'\n",
-    "test_imgs_path = root/'val2017'\n",
+    "#########\n",
+    "# paths for Khalil\n",
+    "#########\n",
+    "# root = Path('Data')\n",
+    "\n",
     "#captions_path = root/'annotations'/'captions_train2017.json'\n",
-    "train_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_train.json'\n",
-    "val_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_val.json'\n",
-    "test_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_test.json'\n",
+    "\n",
+    "# train_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_train.json'\n",
+    "# val_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_val.json'\n",
+    "# test_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_test.json'\n",
+    "\n",
+    "#########\n",
+    "# paths for Alex\n",
+    "#########\n",
+    "\n",
+    "root = Path('Datasets/coco')\n",
+    "imgs_path = root/'images'/'train2017'\n",
+    "imgs_path_test = root/'images'/'val2017'\n",
+    "\n",
+    "train_captions_path = root/'annotations'/'sports_captions_train.json'\n",
+    "val_captions_path = root/'annotations'/'sports_captions_val.json'\n",
+    "test_captions_path = root/'annotations'/'sports_captions_test.json'\n",
     "\n",
     "\"\"\"\n",
     "# load vocab\n",
@@ -638,7 +652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
