--- a/interface.ipynb
+++ b/interface.ipynb
@@ -13,7 +13,16 @@
    "execution_count": 1,
    "id": "0d50cdee-407b-448c-9800-b03fdb30ebaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alexxcollins/miniforge3/envs/deep/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "3ccde8ce",
    "metadata": {},
    "outputs": [],
@@ -44,14 +53,17 @@
     "with open('vocabulary/string_to_index.json') as json_file:\n",
     "    string_to_index = json.load(json_file)\n",
     "    \n",
-    "root = Path('Data')\n",
-    "#imgs_path = root/'images'/'train2017'\n",
-    "imgs_path = root/'train2017'\n",
-    "imgs_path_test = root/'val2017'\n",
+    "# root = Path('Data')\n",
+    "root = Path('Datasets/coco')\n",
+    "imgs_path = root/'images'/'train2017'\n",
+    "imgs_path_test = root/'images'/'val2017'\n",
     "#captions_path = root/'annotations'/'captions_train2017.json'\n",
-    "train_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_train.json'\n",
-    "val_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_val.json'\n",
-    "test_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_test.json'"
+    "train_captions_path = root/'annotations'/'sports_captions_train.json'\n",
+    "val_captions_path = root/'annotations'/'sports_captions_val.json'\n",
+    "test_captions_path = root/'annotations'/'sports_captions_test.json'\n",
+    "# train_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_train.json'\n",
+    "# val_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_val.json'\n",
+    "# test_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_test.json'"
    ]
   },
   {
@@ -133,69 +145,6 @@
    ],
    "source": [
     "len(coco_interface_train.string_to_index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "dba77f6c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['000000000077.jpg', 'A young man riding a skateboard into the air.']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "coco_interface_train.img_deque[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3e04f114",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['000000000149.jpg', 'People gathered outside in a big field on a cloudy day']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "coco_interface_train.img_deque[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "09d06c2b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16252"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(coco_interface_train.img_deque)"
    ]
   },
   {
@@ -437,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
