changed id to i to avoid overwriting built in id() function

--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -358,7 +358,7 @@
     "        encoder.train()\n",
     "        decoder.train()\n",
     "        \n",
-    "        for id, batch in enumerate(train_loader):\n",
+    "        for i, batch in enumerate(train_loader):\n",
     "            idx, images, captions = batch\n",
     "            images, captions = images.to(device), captions.to(device)\n",
     "            \n",
@@ -375,8 +375,8 @@
     "            optimizer.step()\n",
     "        \n",
     "            train_epoch_loss += loss.item()\n",
-    "            if id % 100 == 0:\n",
-    "                print('Training: ', id, ' ', loss.item())\n",
+    "            if i % 100 == 0:\n",
+    "                print('Training: ', i, ' ', loss.item())\n",
     "                \n",
     "        train_epoch_loss /= len(train_loader)\n",
     "        training_loss.append(train_epoch_loss)\n",
@@ -636,70 +636,6 @@
     "}\n",
     "\n",
     "training_loss, validation_loss = train(**train_params) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e20b472b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfa8404d-3428-4363-a71e-debe5bfb12f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Path.cwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "976cee36-4e85-46be-9805-98c43682cc57",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "938"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = Path.cwd()/'Datasets/coco/images/val2017/'\n",
-    "len(sorted(f.glob('**/*')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "cd744131-ded2-4256-bf86-5601ded46050",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "567"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f2 = Path.cwd()/'Datasets/coco/images/train2017/'\n",
-    "len(sorted(f2.glob('**/*')))"
    ]
   },
   {
